fix img covers

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -248,7 +248,7 @@ a {
 }
 
 .img-100 {
-  background-size: auto;
+  background-size: contain;
   background-position-x: center;
   background-position-y: center;
   width: 100%;
